--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
     "eslint": "^9.18.0",
     "eslint-config-next": "^16.1.4",
     "typescript": "^5.7.3",
+    "typescript-eslint": "^8.53.1",
     "vitest": "^4.0.18"
   },
   "engines": {
