feat: 初期データ投入CLIスクリプト実装
- scripts/seed/配下にseedスクリプト群を追加
  - calendar.ts: 取引カレンダー
  - equity-master.ts: 銘柄マスタ
  - topix.ts: TOPIX日足
  - equity-bars.ts: 株価日足
  - financial.ts: 財務サマリー
  - earnings.ts: 決算発表予定
  - investor-types.ts: 投資部門別売買状況
  - index.ts: 全データセット一括投入
  - _shared.ts: 共通ユーティリティ

- J-Quants API V2投資部門別売買状況のフィールド名修正
  - 実際のAPIレスポンスに合わせて型定義を修正
  - APIフィールド名→DB保存用名称のマッピング追加
  - raw_json NOT NULL制約対応（空オブジェクト使用）

- package.jsonにseed用scriptsとtsx/dotenv依存追加

--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint",
     "test": "vitest",
     "test:run": "vitest run",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "seed:calendar": "tsx scripts/seed/calendar.ts",
+    "seed:master": "tsx scripts/seed/equity-master.ts",
+    "seed:topix": "tsx scripts/seed/topix.ts",
+    "seed:bars": "tsx scripts/seed/equity-bars.ts",
+    "seed:financial": "tsx scripts/seed/financial.ts",
+    "seed:earnings": "tsx scripts/seed/earnings.ts",
+    "seed:investors": "tsx scripts/seed/investor-types.ts",
+    "seed:all": "tsx scripts/seed/index.ts"
   },
   "dependencies": {
     "@sentry/nextjs": "^10.36.0",
@@ -26,8 +34,10 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
+    "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
     "eslint-config-next": "^16.1.4",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.53.1",
     "vitest": "^4.0.18"
