feat: cron-a-direct.ts 汎用化 — equity_master も直接実行に移行
equity-bars-direct.ts を cron-a-direct.ts にリネーム・汎用化し、
CLI引数でdataset(equity_bars/equity_master)を指定可能に。
equity_master の504対応（Vercel 10秒制限回避）。

- job_runs 追跡を除去（複数datasetが同一job_name+target_dateで衝突するため）
- sync関数のupsert冪等性に依存するシンプルな設計
- workflow に concurrency 制御追加、timeout を15分に延長
- 前営業日取得失敗時は非ゼロ終了（サイレント成功を防止）

--- a/.github/workflows/cron-a.yml
+++ b/.github/workflows/cron-a.yml
@@ -9,10 +9,14 @@ on:
     - cron: '40 9 * * *'  # JST 18:40
   workflow_dispatch:       # 手動実行
 
+concurrency:
+  group: cron-a
+  cancel-in-progress: false
+
 jobs:
   sync:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 15
     environment: production
 
     steps:
@@ -41,7 +45,7 @@ jobs:
           JQUANTS_API_KEY: ${{ secrets.JQUANTS_API_KEY }}
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-        run: npx tsx scripts/cron/equity-bars-direct.ts
+        run: npx tsx scripts/cron/cron-a-direct.ts equity_bars
 
       - name: Trigger Cron A - TOPIX
         run: |
@@ -59,13 +63,12 @@ jobs:
             -d '{"dataset": "financial"}' \
             --fail --silent --show-error --max-time 300
 
-      - name: Trigger Cron A - Equity Master
-        run: |
-          curl -X POST "${{ secrets.VERCEL_URL }}/api/cron/jquants/a" \
-            -H "Authorization: Bearer ${{ secrets.CRON_SECRET }}" \
-            -H "Content-Type: application/json" \
-            -d '{"dataset": "equity_master"}' \
-            --fail --silent --show-error --max-time 120
+      - name: Sync Equity Master (direct)
+        env:
+          JQUANTS_API_KEY: ${{ secrets.JQUANTS_API_KEY }}
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+        run: npx tsx scripts/cron/cron-a-direct.ts equity_master
 
       - name: Notify on failure
         if: failure()
