--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "seed:earnings": "tsx scripts/seed/earnings.ts",
     "seed:investors": "tsx scripts/seed/investor-types.ts",
     "seed:all": "tsx scripts/seed/index.ts",
-    "cron:equity-bars": "tsx scripts/cron/equity-bars-direct.ts"
+    "cron:direct": "tsx scripts/cron/cron-a-direct.ts"
   },
   "dependencies": {
     "@sentry/nextjs": "^10.36.0",
