chore: e-Stat APIキーのテンプレートを追加

--- a/.env.local.example
+++ b/.env.local.example
@@ -21,6 +21,9 @@ SENTRY_ORG=your-org-slug
 SENTRY_PROJECT=your-project-name
 SENTRY_AUTH_TOKEN=your-auth-token
 
+# e-Stat API
+ESTAT_API_KEY=your-estat-api-key
+
 # Optional
 SYNC_MAX_CATCHUP_DAYS=5
 INVESTOR_TYPES_WINDOW_DAYS=60
