chore: FRED APIキーのテンプレートを追加

--- a/.env.local.example
+++ b/.env.local.example
@@ -24,6 +24,9 @@ SENTRY_AUTH_TOKEN=your-auth-token
 # e-Stat API
 ESTAT_API_KEY=your-estat-api-key
 
+# FRED API
+FRED_API_KEY=your-fred-api-key
+
 # Optional
 SYNC_MAX_CATCHUP_DAYS=5
 INVESTOR_TYPES_WINDOW_DAYS=60
